# pytuq

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  package.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/apps/: awkies.doctree  iuq.doctree  other.doctree  pc.doctree  plot.doctree  surrogates.doctree  uqpc.doctree
.doctrees/auto_examples/: ex_genz_bcs.doctree  ex_nn.doctree  ex_pce.doctree  index.doctree  sg_execution_times.doctree
.doctrees/autoapi/: index.doctree
.doctrees/examples/: functions.doctree  inference.doctree  pc.doctree  plotting.doctree  regression.doctree  rosenblatt.doctree  rv.doctree  sensitivity.doctree
.doctrees/misc/: about.doctree  diagram.doctree  indices.doctree  installation.doctree  references.doctree
.github/workflows/: documentation.yml  python-test.yml
_downloads/4ffd0bf857991285f458e9571f8cff98/: ex_pce.ipynb
_downloads/e477f5b46fb343f3cad50e6de56e0998/: ex_nn.ipynb
_images/: inheritance-04f22a9696776dde2c266ca12dec5e9728dc37d4.png.map  inheritance-1548a87462a014d7445dc31fca8d11ee7100f0c7.png.map  inheritance-38b8007d046def49c5bc932f75df13d284364f9e.png.map  inheritance-3f775533c9108306927d1a99abf41d48719c3054.png.map  inheritance-8276fce663f20e943f224fc35b84f5fda16adcaf.png.map  inheritance-8c7f1781755edc5d220337eaba171b3c396fbddc.png.map  inheritance-9021df731b9c25d96e12942b4caa10ba60f08138.png.map  inheritance-a3a8046b90c69a464ce5f9de6b90281c521c3749.png.map  inheritance-c4043e35db5d7fa9c064010ad492267f5b1db7a0.png.map  inheritance-f8bd38a7b4a49b52b030af28b4983c8c87c9411b.png.map
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/apps/: awkies.rst.txt  iuq.rst.txt  surrogates.rst.txt
_sources/auto_examples/: ex_genz_bcs.rst.txt  ex_nn.rst.txt  ex_pce.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/autoapi/: index.rst.txt
_sources/examples/: functions.rst.txt  inference.rst.txt  pc.rst.txt  plotting.rst.txt  regression.rst.txt
_sources/misc/: indices.rst.txt  (+1 more)
apps/: awkies.html  create_data.py  iuq.html  kl_fit.py  klsurr_fit.py  mrun.py  nn_fit.py  other.html  pc.html  pc_fit.py  pc_prep.py  pc_sam.py  plot.html  plot_cov.py  plot_ens.py  plot_pcoord.py  plot_pdfs.py  plot_xx.py  plot_yx.py  plot_yxx.py  surrogates.html  uqpc.html  wf_uqpc.x
auto_examples/: ex_genz_bcs.html  ex_nn.html  ex_pce.html  index.html  sg_execution_times.html
autoapi/: index.html
contributed/agentic_mcmc/: README.md  mcmc_mcp_server.py  mcmc_mcp_test.ipynb  mcmc_run.py  mcp_client.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  references.bib
examples/: ex_bcs.py  ex_bcs_mindex_growth.py  ex_colors.py  ex_evidence.py  ex_func.py  ex_funcall.py  ex_funcgrad.py  ex_genz1d.py  ex_gmm.py  ex_gp.py  ex_gsa.py  ex_gsa_multi.py  ex_gso.py  ex_integrate.py  ex_iros_1d.py  ex_iros_2d.py  ex_kl.py  ex_klpc.py  ex_lreg.py  ex_lreg_basiseval.py  ex_lreg_merr.py  ex_mcmc_banana.py  ex_mcmc_fitline.py  ex_mcmc_fitmodel.py  ex_mcmcrv.py  ex_mfvi.py  ex_mindex.py  ex_minf.py  ex_minf_sketch.py  ex_mixture.py  ex_mrv.py  ex_optim.py  ex_orf.py  ex_pcbasis1d.py  ex_pcgsa.py  ex_pcrv.py  ex_pcrv1.py  ex_pcrv2.py  ex_pcrv_mvn.py  ex_plot_fcn.py  (+19 more)
misc/: about.html  diagram.html  indices.html  installation.html  references.html
tests/: test_composefcn.py  test_diam.py  test_dom.py  test_func_oper.py  test_genz.py  test_gmm.py  test_gp.py  test_gsa.py  test_hess.py  test_integr.py  test_lreg.py  test_maps.py  test_metrics.py  test_mi.py  test_mindex.py  test_minf.py  test_optim.py  test_pce.py  test_pcrv.py  test_poly.py  test_rosen.py  test_stats.py  test_svd.py  test_toy.py
(+407 files in other folders)
