[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytuq"
version = "1.0.0"
description = "Python-only set of tools for uncertainty quantification."
authors = [ 
  {name = "Khachik Sargsyan"},
  {name = "Bert Debusschere"},
  ]
maintainers = [ 
  {name = "Emilie Grace Baillo"}
]
requires-python = ">=3.8"

readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["uncertainty quantification"]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Operating System :: MacOS',]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.urls]
Homepage = "https://sandialabs.github.io/pytuq/"
Repository = "https://github.com/sandialabs/pytuq"
Documentation = "https://sandialabs.github.io/pytuq/"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov"
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "ipython",
    "sphinx-autoapi",
    "sphinxcontrib-bibtex"
]
nn = [
    "torch",
    "uqinn"
]
optim = [
    "pyswarms"
]
all = [
    "torch",
    "uqinn",
    "pyswarms",
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "ipython",
    "sphinx-autoapi",
    "sphinxcontrib-bibtex"
]


[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.setuptools]
package-dir = {"" = "src"}
