[project]
name = "pytuq-mcmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.76.0",
    "google-genai>=1.0.0",
    "ipykernel>=7.2.0",
    "mcp>=1.25.0",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "pytuq>=1.0.0",
    "scipy>=1.17.0",
    "matplotlib>=3.9.0",
]

# ────────────────────────────────────────────────────────────────
# Optional dependencies (extras)
# ────────────────────────────────────────────────────────────────
#[project.optional-dependencies]
# Users who need the shirty integration can request this extra.
#shirty = ["shirty>=0.12.0"]

#[tool.uv]
#allow-insecure-host = ["files.pythonhosted.org"]
